\name{NEWS}
\title{NEWS file of the TraMineRextras package}

\section{Changes in version 0.7.8 [2024-01-08] }{

    \subsection{Misc.}{
        \itemize{
            \item
            No changes
        }
    }
}


\section{Changes in version 0.6.7 [2024-01-08] }{

    \subsection{Changes in existing functions}{
    	\itemize{
    		\item
            All TraMineRextras plot functions: improved support of
            graphical parameters. (E.g., \code{las} and \code{cex.axis} can
            now be used to control the display of tick labels.)
    	}
    }

    \subsection{Bug fixes}{
        \itemize{
            \item
            seqimplic.Rd: lack of description for argument \code{ylim}.
            \item
            \code{seqpolyads()}: time reported when \code{core > 1} was not reliable
            \item
            \code{convert.g()}: error when \code{path=NULL}.
            \item
            \code{convert.g()} adapted to changes in ImageMagick.

        }
    }
}

\section{Changes in version 0.6.6 [2023-03-07] }{

    \subsection{New function}{
    	\itemize{
    		\item
            \code{dissindic()} case indicators to select observations that are typical, atypical,
            illustrative of or counterexample of a statistical association between trajectories
    	    and a covariate/typology.
    	}
    }
    \subsection{Changes in existing functions}{
        \itemize{
            \item
            \code{seqsplot()}, argument \code{axes} is deprecated and replaced by \code{xaxis}.
            Argument \code{yaxis} can now also be one of \code{"all"} or \code{"left"}.
            \item
            \code{seqsplot()}, \code{ylab} can be a vector of labels by group level.
            \item
            \code{seqsplot()} supports arguments of \code{legend} among the \code{...} list.
            \item
            \code{plot.stslist.surv()}, plot method for objects returned by \code{seqsurv} displays