@@ -1,6 +1,6 @@
 Package: TraMineRextras
 Version: 0.7.8
-Date: 2024-01-08
+Date: 2024-03-14
 Title: TraMineR Extension
 Authors@R: c(
   person("Gilbert", "Ritschard", role = c("aut", "cre", "ths", "cph"),
