@@ -2,16 +2,21 @@
 \alias{seqCompare}
 \alias{seqLRT}
 \alias{seqBIC}
+\alias{dissCompare}
 
-\title{BIC and Likelihood ratio test for comparing two sequence data}
+\title{BIC and Likelihood ratio test for comparing two groups}
 
-\description{The function \code{seqCompare} computes the likelihood ratio test (LRT) and Bayesian Information Criterion (BIC) for comparing two groups within each of a series of set. The functions \code{seqBIC} and \code{seqLRT} are aliases that return only the BIC or the LRT.
+\description{Functions \code{seqCompare} and \code{dissCompare} compute the likelihood ratio test (LRT) and Bayesian Information Criterion (BIC) difference for comparing two groups within each of a series of sets. \code{seqCompare} compares two groups of sequences. \code{dissCompare} is more general and compares any two groups of data represented by a pairwise dissimilarity matrix. Functions \code{seqBIC} and \code{seqLRT} are aliases of \code{seqCompare} that return only the \eqn{\Delta}{Delta }BIC or the LRT.
 }
 
 \usage{
 seqCompare(seqdata, seqdata2=NULL, group=NULL, set=NULL,
     s=100, seed=36963, stat="all", squared="LRTonly",
     weighted=TRUE, opt=NULL, BFopt=NULL, method, ...)
+
+dissCompare(diss, group, set=NULL,
+    s=100, seed=36963, stat="all", squared="LRTonly",
+    weighted=TRUE, weights=NULL, BFopt=NULL)
 
 seqLRT(seqdata, seqdata2=NULL, group=NULL, set=NULL, s=100,
     seed=36963, squared="LRTonly", weighted=TRUE, opt=NULL,
@@ -23,13 +28,15 @@ seqBIC(seqdata, seqdata2=NULL, group=NULL, set=NULL, s=100,
 }
 
 \arguments{
-\item{seqdata}{Either a state sequence object (\code{stslist} created with \code{\link[TraMineR]{seqdef}}) or a list of state sequence objects, e.g., \code{list(cohort1.seq,cohort2.seq,cohort3.seq)}.
-  %\code{list()} function. E.g., list(cohort1.seq,cohort2.seq,cohort3.seq) where *.seq is
-  %generated by \code{\link[TraMineR]{seqdef}}.
-}
-
-\item{seqdata2}{Either a state sequence object (\code{stslist} or a list of state sequence objects. Must be \code{NULL} when \code{group} is not \code{NULL}. If not \code{NULL}, must be of same type than \code{seqdata}. See details.
-}
+    \item{seqdata}{Either a state sequence object of class \code{stslist} created with \code{\link[TraMineR]{seqdef}} or a list of state sequence objects, e.g., \code{list(cohort1.seq,cohort2.seq,cohort3.seq)}.
+      %\code{list()} function. E.g., list(cohort1.seq,cohort2.seq,cohort3.seq) where *.seq is
+      %generated by \code{\link[TraMineR]{seqdef}}.
+    }
+    
+    \item{seqdata2}{Either a state sequence object of class \code{stslist} or a list of state sequence objects. Must be \code{NULL} when \code{group} is not \code{NULL}. If not \code{NULL}, must be of same type than \code{seqdata}. See details.
+    }
+  \item{diss}{Matrix or distance object. Symmetric pairwise dissimilarities.
+  }
   \item{group}{Vector of length equal to number of sequences in \code{seqdata}. A dichotomous grouping variable. See details.
   }
   \item{set}{Vector of length equal to number of sequences in \code{seqdata}. Variable defining the sets. See details.
@@ -48,6 +55,8 @@ seqBIC(seqdata, seqdata2=NULL, group=NULL, set=NULL, s=100,
   }
   \item{weighted}{Logical or String. Should weights be taken into account when available? Can also be \code{"by.group"}, in which case weights are used and normalized to respect group sizes.
   }
+  \item{weights}{Vector of length equal to number of row of \code{diss}. Case weights. If \code{NULL} weights are set as \code{rep(1, nrow(diss))}.
+  }
   \item{opt}{Integer or \code{NULL}. Either 1 or 2. Computation option. When 1, the distance matrix is computed successively for each pair of samples of size s. When 2, the distances are computed only once for each pair of sets of observed sequences and the distances for the samples are extracted from that matrix. When \code{NULL} (default), 1 is chosen when the sum of sizes of the two groups is larger than 2*s and 2 otherwise.
   }
   \item{BFopt}{Integer or \code{NULL}. Either 1 or 2. Applies only when BIC is computed on multiple samples. When 1 the displayed Bayes Factor (BF) is the averaged BF. When 2, the displayed BF is obtained from the averaged BIC. When \code{NULL} both BFs are displayed.
@@ -62,29 +71,34 @@ seqBIC(seqdata, seqdata2=NULL, group=NULL, set=NULL, s=100,
 \details{
 The \code{group} and \code{set} arguments can only be used when \code{seqdata} is an \code{stslist} object (a state sequence object).
 
-When \code{seqdata} and \code{seqdata2} are both provided, the LRT and BIC statistics are computed for comparing these two sets. In that case both \code{group} and \code{set} should be left at their default \code{NULL} value.
+When \code{seqdata} and \code{seqdata2} are both provided, the LRT and Delta BIC statistics are computed for comparing these two sets. In that case both \code{group} and \code{set} should be left at their default \code{NULL} value.
 
 When \code{seqdata} is a list of \code{stslist} objects, \code{seqdata2} must be a list of the same number of \code{stslist} objects.
 
-The default option \code{squared="LRTonly"} corresponds to the initial proposition of Liao and Fasang (2021). With that option, the distances to the virtual center are obtained from the pairwise non-squared dissimilarities and the resulting distances to the virtual center are  squared when computing the LRT (which is in turn used to compute the BIC). With \code{squared=FALSE}, non-squared distances are used in both cases, and with \code{squared=TRUE}, squared distances are used in both cases.
+The default option \code{squared="LRTonly"} corresponds to the initial proposition of Liao and Fasang (2021). With that option, the distances to the virtual center are obtained from the pairwise non-squared dissimilarities and the resulting distances to the virtual center are  squared when computing the LRT (which is in turn used to compute \eqn{\Delta}{Delta }BIC). With \code{squared=FALSE}, non-squared distances are used in both cases, and with \code{squared=TRUE}, squared distances are used in both cases.
 
 The computation is based on the pairwise distances between the sequences. The \code{opt} argument permits to choose between two strategies. With \code{opt=1}, the matrix of distances is computed successively for each pair of samples of size s. When \code{opt=2}, the matrix of distances is computed once for the observed sequences and the distances for the samples are extracted from that matrix. Option 2 is often more efficient, especially for distances based on spells. It may be slower for methods such as OM or LCS when the number of observed sequences becomes large.
 }
 
-\value{The function \code{seqLRT} (and seqCompare with the default \code{"LRT"} stat value) outputs two variables, \var{LRT} and \var{p.LRT}.
+\value{Function \code{seqLRT} (and seqCompare with the default \code{"LRT"} stat value) outputs a matrix with two columns, \var{LRT} and \var{p.value}.
 
   \item{LRT}{This is the likelihood ratio test statistic for comparing the two groups.
   }
-  \item{p.LRT}{This is the upper tail probability associated with the LRT.
+  \item{p.value}{This is the upper tail probability associated with the LRT.
   }
-The function \code{seqBIC} (and \code{seqLRT} with the \code{"BIC"} stat value) outputs two variables, \var{BIC} and \var{BF}.
+Function \code{seqBIC} (and \code{seqLRT} with the \code{"BIC"} stat value) outputs a matrix with two columns, \code{Delta BIC} and \code{BF}.
 
-  \item{BIC}{This is the difference between two BICs for comparing the two groups.
+  \item{Delta BIC}{This is the difference between BIC of the model that does not distinguish the two groups and the model taking account of the distinction.
   }
-  \item{BF}{This is the Bayes factor associated with the BIC difference.
+  \item{Bayes Factor}{This is the Bayes factor associated with the BIC difference.
   }
 
-\code{seqCompare} with \code{stat="all"} outputs all four indicators.
+\code{seqCompare} and \code{dissCompare} with \code{stat="all"} return a matrix with all four indicators.
+
+When \code{set=NULL}, the matrix has a single row. Otherwise, there is one row per distinct \code{set} value.
+}
+
+\seealso{\code{\link{dissassoc}}
 }
 
 \author{Tim Liao and Gilbert Ritschard}
