@@ -1,12 +1,19 @@
 \name{NEWS}
 \title{NEWS file of the TraMineRextras package}
 
-\section{Changes in version 0.7.8 [2024-01-08] }{
+\section{Changes in version 0.7.8 [2024-03-16] }{
 
-    \subsection{Misc.}{
+    \subsection{New function}{
         \itemize{
             \item
-            No changes
+            \code{dissCompare()} comparison of two groups of data represented by a pairwise dissimilarity matrix.
+        }
+    }
+    
+    \subsection{Bug fixes}{
+        \itemize{
+            \item
+            \code{seqCompare()} caused an error when only one group occurs in one of the sets. Now returns NA for such sets.
         }
     }
 }
